objects/PartnersPool__c.object
<CustomObject>
    <fields>
        <fullName>Pool_Count__c</fullName>
        <label>Pool Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pool_Reset_Date__c</fullName>
        <label>Pool Reset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pool_Size__c</fullName>
        <label>Pool Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pool_Type__c</fullName>
        <label>Pool Type</label>
        <picklist>
            <picklistValues>
                <fullName>PREMIER-RESIDENTIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTHORIZED-RESIDENTIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMERCIAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Zip/Postal Code</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PartnersPool</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>PartnersPools Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PartnersPools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>